sumo/tests/sumo/errors/network/edge/lane/root__edge__lane#depart__false11/errors.sumo
Error: Attribute 'depart' in definition of lane '1_0' is not a boolean.
Error: An unknown lane ('1_0') was tried to be set as incoming to junction '2'.
Error: Trying to close connections of an unknown lane ('1_0').
Error: Trying to close connections of an unknown lane ('1_1').
Quitting (on error).
